<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/answer"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="246dp"
        android:layout_marginTop="140dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        app:layout_constraintVertical_bias="0.715">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a2"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a3"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a4"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/badd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/a5"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a6"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a9"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a11"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bsub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/a12"
                android:textColor="#6C1B1B"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a8"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a13"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a14"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bmul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/a15"
                android:textColor="#6C1B1B"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bdot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/a17"
                android:textColor="#6C1B1B"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:text="@string/a0"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/x1"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bdiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/a"
                android:text="@string/a16"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/c2"
                android:text="@string/a19"
                android:textColor="#6C1B1B" />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/c2"
                android:text="@string/x2"
                android:textColor="#6C1B1B"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="27dp"
        android:background="@drawable/a"
        android:onClick="Tap1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <LinearLayout
        android:id="@+id/func"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/square"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/aaa"
            android:onClick="Tap5" />

        <Button
            android:id="@+id/cube"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/aaaaa"
            android:onClick="Tap4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/b"
            android:onClick="Tap2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/aaaaaaaa"
            android:onClick="Tap3" />

    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="105dp"
        android:layout_height="33dp"
        android:background="@drawable/clear"
        android:onClick="Tap6"
        android:text="@string/a21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.030" />

    <TextView
        android:id="@+id/history"
        android:layout_width="312dp"
        android:layout_height="120dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

</androidx.constraintlayout.widget.ConstraintLayout>
